test/compile_errors/err_private_transitive_cross_module.w
//! expect-check-fail: symbol 'private_fn' is private to module

use visibility.transitive_mid

fn main:
    let _x = private_fn()
